# yournextgig-backend

./: .gitignore  LICENSE  stack.yaml  yournextgig-backend.cabal
app/: Main.hs
